# plotMcpFiducials

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
src/plotmcpfiducials/: __init__.py  plotmcpfiducials.py
test/: alt.sh  az.sh  rot.sh  test_plotMcpFiducials_alt.py  test_plotMcpFiducials_az.py  test_plotMcpFiducials_rot.py
