[tool.poetry]
name = "plotmcpfiducials"
version = "0.1.0"
description = "Plotting tools for MCP fiducials"
authors = ["José Sánchez-Gallego <gallegoj@uw.edu>"]
license = "BSD-3-Clause"
readme = "README.md"

packages = [
    { include = "plotmcpfiducials", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.7.1"
pydl = "1.0.0rc1"
numpy = "^1.24.3"
sdsstools = "^1.0.2"

[tool.poetry.scripts]
plotMcpFiducials = "plotmcpfiducials.plotmcpfiducials:plotMcpFiducials"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
black = "^23.3.0"

[tool.black]
line-length = 88
target-version = ['py311']
fast = true

[tool.isort]
profile = "black"
sections = ["FUTURE", "STDLIB", "TYPING", "THIRDPARTY", "SDSS", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
known_first_party = "plotmcpfiducials"
known_typing = ["typing"]
known_sdss = ["sdsstools"]
lines_after_imports = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
